   <symlink action="delete" ...> does - it has been introduced to
   handle symlinks and junctions via a single API.

 * added <canCreateSymlink> condition that evaluates to true if the
   current Ant process can create symbolic links.

 * added <windowsjunction> file selector which only select directories
   that are Windows junctions.

Changes from Ant 1.10.14 TO Ant 1.10.15
=======================================

Other changes:
--------------

 * exec task now logs the process' non-zero exit code at INFO
   level instead of the previous ERROR level. The following
   message from exec task is the one who's level has been changed:

   Result: 1

   Bugzilla Report 26453

 * Removes direct references to com.sun.net.ssl.internal.ssl.Provider class
   from the mail task, since that internal JDK class is no longer available
   in recent versions of Java.
   Bugzilla Report 68460

 * <replaceregexp> has a new failOnError attribute which, when
   enabled, makes the task throw a BuildException for certain error
   cases that will only be logged otherwise.
   Github Pull Request #206

 * <ftp> task now has a new "useSecureDataChannel" attribute which
   can be set to true, when ftps is enabled, to enable secure data
   channel.
   Bugzilla Report 68773

Fixed bugs:
-----------

 * Fixes an regression, introduced in Ant 1.10.13, where pathconvert
   would unintentionally trim the string output.
   Bugzilla Report 67082

 * Fixes a bug in <depend> task which would throw a ClassFormatError
   if it encountered constant pool entry type 17.
   Bugzilla Report 66552

 * Launching ant.bat from within a Java program using java.lang.Runtime.exec()
   could result in an unexpected failure. This has now been fixed.
   Bugzilla Report 67417

 * Fixes an issue in bootstrap.bat when trying to detect if the "javac"
   command in the JDK supports the "--release" option.
   Github Pull Request #205

 * Fixes a bug in org.apache.tools.ant.taskdefs.email.EmailAddress which