@@ -73,6 +73,13 @@ different sets of permissions to apply to either type of resource.</p>
     <td>Whether to stop the build if setting permissions fails.</td>
     <td>No; defaults to <q>true</q></td>
   </tr>
+  <tr>
+    <td>actOnLinkTargets</td>
+    <td>Whether to set the permissions of the targets of symbolic
+    links or Windows junctions instead of the links
+    themselves. <em>since Ant 1.10.16</em>.</td>
+    <td>No; defaults to <q>true</q></td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 
